--- a/src/scss/layout/_calc.scss
+++ b/src/scss/layout/_calc.scss
@@ -162,7 +162,7 @@
             content: '';
             position: absolute;
             top: 0;
-            @include res('right', -369px);
+            @include res('right', -370px);
             @include res('width', 1550px);
             height: 100%;
             background: url('../img/calc-bg.png') center / cover no-repeat;
@@ -203,6 +203,258 @@
         @include media(576){
             @include resa('font-size', 16px);
             line-height: 120%;
+        }
+        span{
+            color: #325CFE;
+            font-weight: 700;
+        }
+    }
+    &__olympiads{
+        .calc__body{
+            @include media(575){
+                flex-direction: column;
+            }
+        }
+        .calc__top{
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-start !important;
+            position: relative;
+            @include media(575){
+                @include resa('margin-bottom', 20px);
+            }
+        }
+        .calc__bot{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            @include media(575){
+                flex-direction: column;
+            }
+        }
+        .calc__title{
+            @include res('max-width', 570px);
+            width: 100%;
+            @include media(575){
+                max-width: 100%;
+                text-align: center;
+            }
+        }
+        .calc__p{
+            @include res('max-width', 520px);
+            width: 100%;
+            @include media(575){
+                max-width: 100%;
+                text-align: center;
+                @include resa('margin-bottom', 20px);
+            }
+        }
+        .calc__bot{
+            @include res('padding-left', 110px);
+            @include media(575){
+                padding-left: 0;
+            }
+        }
+        .olympiads{
+            &__girl{
+                position: absolute;
+                @include res('width', 420px);
+                @include res('height', 600px);
+                bottom: 0;
+                right: 0;
+                @include media(575){
+                    display: none;
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            &__left{
+                display: flex;
+                align-items: flex-end;
+            }
+            &__wrapper{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &:not(:last-of-type){
+                    @include res('margin-right', 30px);
+                    @include media(575){
+                        @include resa('margin-right', 10px);
+                    }
+                }
+            }
+            &__imgs{
+                display: flex;
+                align-items: stretch;
+                @include res('column-gap', 25px);
+                @include media(575){
+                    @include resa('column-gap', 10px);
+                }
+            }
+            &__img{
+                @include res('width', 199px);
+                overflow: hidden;
+                @include res('border-radius', 20px);
+                @include media(575){
+                    @include resa('width', 80px);
+                    @include resa('border-radius',10px);
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+                &.bg{
+                    @include res('width', 250px);
+                    display: flex;
+                    align-items: flex-end;
+                    @include media(575){
+                        @include resa('width', 130px);
+                    }
+                    img{
+                        height: 100%;
+                        line-height: 0;
+                    }
+                }
+            }
+            &__subtitle{
+                color: #1D1D1D;
+                @include res('font-size', 26px);
+                @include res('line-height', 34px);
+                font-style: normal;
+                font-weight: 500;
+                @include res('margin-bottom', 5px);
+                @include media(575){
+                    @include resa('font-size', 14px);
+                    @include resa('line-height', 18px);
+                    @include resa('margin-bottom', 2px);
+                }
+                span{
+                    font-weight: 700;
+                    color: #325CFE;
+                }
+            }
+            &__right{
+                display: flex;
+                flex-direction: column;
+                align-items: stretch;
+            }
+            &__content{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                @include res('border-radius', 10px);
+                background: #FFF;
+                @include res('padding-top', 4px);
+                @include res('padding-right', 41px);
+                @include res('padding-bottom', 4px);
+                @include res('padding-left', 41px);
+                @include res('margin-bottom', 15px);
+                @include media(575){
+                    @include resa('border-radius', 10px);
+                    @include resa('padding-top', 4px);
+                    @include resa('padding-right', 41px);
+                    @include resa('padding-bottom', 4px);
+                    @include resa('padding-left', 41px);
+                    @include resa('margin-bottom', 15px);
+                }
+            }
+            &__p{
+                color: #325CFE;
+                @include res('font-size', 20px);
+                @include res('line-height', 34px);
+                font-style: normal;
+                font-weight: 700;
+                @include res('margin-bottom', 2px);
+                @include media(575){
+                    @include resa('font-size', 14px);
+                    @include resa('line-height', 18px);
+                    @include resa('margin-bottom', 5px);
+                }
+            }
+            &__items{
+                display: flex;
+                align-items: flex-start;
+                justify-content: space-between;
+                width: 100%;
+            }
+            &__item{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                &:not(:last-of-type){
+                    @include res('margin-right', 8px);
+                    @include media(575){
+                        @include resa('margin-right', 5px);
+                    }
+                }
+            }
+            &__date{
+                @include res('padding-top', 8px);
+                @include res('padding-right', 24px);
+                @include res('padding-bottom', 8px);
+                @include res('padding-left', 24px);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #262626;
+                @include res('font-size', 36px);
+                @include res('line-height', 34px);
+                font-style: normal;
+                font-weight: 500;
+                @include res('border-radius', 10px);
+                border: solid #325CFE;
+                @include res('border-width', 1px);
+                background: #FFF;
+                @include res('min-width', 68px);
+                @include res('width', 68px);
+                @include media(575){
+                    @include resa('padding-top', 4px);
+                    @include resa('padding-right', 10px);
+                    @include resa('padding-bottom', 4px);
+                    @include resa('padding-left', 10px);
+                    @include resa('font-size', 16px);
+                    @include resa('line-height', 18px);
+                    @include resa('border-radius', 10px);
+                    @include resa('border-width', 1px);
+                    @include resa('min-width', 40px);
+                    @include resa('width', 40px);
+                    @include resa('margin-bottom', 4px);
+                }
+            }
+            &__txt{
+                color: #000;
+                @include res('font-size', 12px);
+                @include res('line-height', 20px);
+                font-weight: 500;
+                @include media(575){
+                    @include resa('font-size', 10px);
+                    @include resa('line-height', 12px);
+                }
+            }
+            &__btn{
+                @include res('border-radius', 10px);
+                background: #325CFE;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #FFF;
+                text-align: center;
+                @include res('font-size', 20px);
+                @include res('line-height', 53px);
+                font-style: normal;
+                font-weight: 700;
+                @include res('padding-top', 8px);
+                @include res('padding-bottom', 8px);
+                @include media(575){
+                    @include resa('border-radius', 10px);
+                    @include resa('font-size', 12px);
+                    @include resa('line-height', 14px);
+                    @include resa('padding-top', 8px);
+                    @include resa('padding-bottom', 8px);
+                }
+            }
         }
     }
 }
