--- a/src/scss/layout/_calc.scss
+++ b/src/scss/layout/_calc.scss
@@ -222,6 +222,7 @@
             position: relative;
             @include media(575){
                 @include resa('margin-bottom', 20px);
+                padding-top: 0;
             }
         }
         .calc__bot{
