--- a/src/scss/layout/_intro.scss
+++ b/src/scss/layout/_intro.scss
@@ -391,4 +391,28 @@
             }
         }
     }
+    &_internal{
+        .intro{
+            &__bg{
+                @include media(576){
+                    display: block;
+                    width: 100%;
+                    border-radius: 0;
+                }
+            }
+            &__col{
+                margin-bottom: 0;
+            }
+            &__img{
+                @include res('width', 500px);
+                @include media(575){
+                    width: 100%;
+                    @include resa('margin-top', 30px);
+                }
+                img{
+                    width: 100%;
+                }
+            }
+        }
+    }
 }
