--- a/src/internal.pug
+++ b/src/internal.pug
@@ -20,19 +20,15 @@ html(lang="en")
                 include components/people
                 +people
                 include components/tutorial
-                +tutorial
-                include components/training
-                +olympiads-training
+                +internal-tutorial
                 include components/diplomas
                 +diplomas
                 include components/samples 
                 +olympiads-samples 
                 include components/calc 
-                +olympiads-calc 
-                include components/reviews 
-                +reviews 
-                include components/faq 
-                +faq 
+                +olympiads-calc
+                include components/templates 
+                +templates
             include components/footer 
             +footer
         script(src="js/app.min.js") 
