--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,6 +40,7 @@
     'layout/people',
     'layout/tutorial',
     'layout/diplomas',
+    'layout/templates',
     'layout/forms';
 
 // components
