--- a/src/components/tutorial.pug
+++ b/src/components/tutorial.pug
@@ -6,4 +6,14 @@ mixin tutorial()
                 img(src="@img/tutorial-img.png", alt="" draggable="false")
                 button(type="button").tutorial__play 
                     img(src="@img/play.svg", alt="" draggable="false")
-            a(href="#!").tutorial__link Перейти к категориям олимпиад → 
+            a(href="#!").tutorial__link Перейти к категориям олимпиад →
+
+mixin internal-tutorial()
+    .tutorial.tutorial_internal 
+        .tutorial__body.container 
+            h2.tutorial__title Посмотрите #[span.bold видеоинструкцию] #[span (1,5 мин)]
+            a(href="#!").tutorial__img 
+                img(src="@img/tutorial-img.png", alt="" draggable="false")
+                button(type="button").tutorial__play 
+                    img(src="@img/play.svg", alt="" draggable="false")
+            a(href="#!").tutorial__link Перейти к категориям олимпиад →
