--- a/src/compets.pug
+++ b/src/compets.pug
@@ -6,7 +6,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/style.min.css")
         title Document
-    body.internal 
+    body.ultimate 
         .wrapper  
             include components/header 
             +header 
@@ -14,9 +14,7 @@ html(lang="en")
                 include components/intro 
                 +internal-intro
                 include components/teachers
-                +olympiadsTeachers 
-                include components/category
-                +category
+                +ultimate-teachers 
                 include components/people
                 +people
                 include components/tutorial
