--- a/src/components/intro.pug
+++ b/src/components/intro.pug
@@ -105,58 +105,89 @@ mixin olympiads-intro()
         .intro__bg 
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
-            .intro__left
-                .intro__breadcrumbs
-                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                    <a href="#" class="intro__breadcrumbs-item active">Курсы профессиональной переподготовки</a>
-                h1.intro__title КУРСЫ ПРОФЕССИОНАЛЬНОЙ ПЕРЕПОДГОТОВКИ
-                p.intro__p.small Получи официальные документы установленного образца о переподготовке в соотвествии с ФГОС 
-                .intro__row 
-                    .intro__col
-                        a(href="#!").intro__btn Выбрать олипмиаду
-                        p.intro__btn-p Прошли более 300 000 участников
-                    .intro__col
-                        a(href="#!").intro__cabinet 
-                            img(src="@img/diploma.svg", alt="" draggable="false")
-                            | Получить диплом
-                        p.intro__btn-p Вы можете сами настроить внешний вид
-                .intro__wrappers 
-                    .intro__wrapper 
-                        p.intro__subtitle Кому подойдет:
-                        ul.intro__content 
-                            li.intro__li для учителей
-                            li.intro__li для дошкольников
-                            li.intro__li для студентов
-                            li.intro__li для школьников
-                    .intro__wrapper 
-                        p.intro__subtitle Направления:
-                        ul.intro__content 
-                            li.intro__li на разные темы
-                            li.intro__li для всех классов
-                            li.intro__li по предметам
-                            li.intro__li по ФГОС
-            .intro__img 
-                img(src="@img/intro-img.png", alt="" draggable="false")
+            .intro__breadcrumbs
+            <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+            <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады</a>
+            .intro__flex
+                .intro__left
+                    h1.intro__title Примите участие в олимпиаде и #[span получите диплом] победителя всего за #[span 2 минуты]
+                    p.intro__p.small Получи официальные документы установленного образца о переподготовке в соотвествии с ФГОС 
+                    .intro__row 
+                        .intro__col
+                            a(href="internal.html").intro__btn Выбрать олипмиаду
+                            p.intro__btn-p Прошли более 300 000 участников
+                        .intro__col
+                            a(href="#!").intro__cabinet 
+                                img(src="@img/diploma.svg", alt="" draggable="false")
+                                | Получить диплом
+                            p.intro__btn-p Вы можете сами настроить внешний вид
+                    .intro__wrappers 
+                        .intro__wrapper 
+                            p.intro__subtitle Кому подойдет:
+                            ul.intro__content 
+                                li.intro__li для учителей
+                                li.intro__li для дошкольников
+                                li.intro__li для студентов
+                                li.intro__li для школьников
+                        .intro__wrapper 
+                            p.intro__subtitle Направления:
+                            ul.intro__content 
+                                li.intro__li на разные темы
+                                li.intro__li для всех классов
+                                li.intro__li по предметам
+                                li.intro__li по ФГОС
+                .intro__right 
+                    .intro__img 
+                        img(src="@img/intro-img.png", alt="" draggable="false")
+                    p.intro__info Участие бесплатное!
                 
 mixin internal-intro()
     section.intro.intro_internal#intro
         .intro__bg 
             img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
         .intro__body.container
-            .intro__left
-                .intro__breadcrumbs
-                    <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
-                    <a href="#" class="intro__breadcrumbs-item active">Курсы профессиональной переподготовки</a>
-                h1.intro__title КУРСЫ ПРОФЕССИОНАЛЬНОЙ ПЕРЕПОДГОТОВКИ
-                p.intro__p.small Получи официальные документы установленного образца о переподготовке в соотвествии с ФГОС 
-                .intro__row 
-                    .intro__col
-                        a(href="#!").intro__btn Выбрать олипмиаду
-                        p.intro__btn-p Прошли более 300 000 участников
-                    .intro__col
-                        a(href="#!").intro__cabinet 
-                            img(src="@img/diploma.svg", alt="" draggable="false")
-                            | Получить диплом
-                        p.intro__btn-p Вы можете сами настроить внешний вид
-            .intro__img 
-                img(src="@img/intro-img.png", alt="" draggable="false")
+            .intro__breadcrumbs
+                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады для студентов</a>
+            .intro__flex
+                .intro__left
+                    h1.intro__title Олимпиады для #[span студентов] по самым разным темам 
+                    p.intro__p.small Мы приготовили более 2000 всероссийских и международных олимпиад, участвуйте и получите диплом победителя. 
+                    .intro__row 
+                        .intro__col
+                            a(href="ultimate.html").intro__btn Выбрать тему
+                            p.intro__btn-p Прошли более 300 000 участников
+                        .intro__col
+                            a(href="#!").intro__cabinet 
+                                img(src="@img/diploma.svg", alt="" draggable="false")
+                                | Получить диплом
+                            p.intro__btn-p Вы можете сами настроить внешний вид
+                .intro__right 
+                    .intro__img 
+                        img(src="@img/intro-img.png", alt="" draggable="false")
+                    p.intro__info Участие бесплатное!
+                
+mixin ultimate-intro()
+    section.intro.intro_ultimate#intro
+        .intro__bg 
+            img(src="@img/olympiads-intro-bg.png", alt="" draggable="false")
+        .intro__body.container
+            .intro__breadcrumbs
+                <a href="#" class="intro__breadcrumbs-item">Для учителя ></a> 
+                <a href="#" class="intro__breadcrumbs-item active">Онлайн олимпиады > Олимпиады по медецине > Олипмиада “МДК «Безопасная среда для пациента и персонала»"</a>
+            .intro__flex
+                .intro__left
+                    h1.intro__title Олимпиада "МДК «Безопасная среда для пациента и персонала»"
+                    .intro__row 
+                        .intro__col
+                            a(href="#!").intro__btn Начать олимпиаду
+                            p.intro__btn-p Прошли более 300 000 участников
+                        .intro__col
+                            a(href="#!").intro__cabinet 
+                                img(src="@img/diploma.svg", alt="" draggable="false")
+                                | Получить диплом
+                            p.intro__btn-p Вы можете сами настроить внешний вид
+                .intro__right 
+                    .intro__img 
+                        img(src="@img/intro-img.png", alt="" draggable="false")
+                    p.intro__info Участие бесплатное!
