--- a/src/components/teachers.pug
+++ b/src/components/teachers.pug
@@ -91,3 +91,36 @@ mixin olympiadsTeachers()
                             p.teachers__subtitle Большой выбор олимпиад
                         p.teachers__desc Среднее время прохождения олимпиады всего лишь 5 минут. В нашем образовательном центре прошли олимпиады более 300 000 человек.
                         p.teachers__desc Мы предлагаем вам выбор свыше 100 олимпиад на самые различные темы и направления.
+
+mixin ultimate-teachers()   
+    .teachers.teachers__ultimate 
+        .teachers__body.container 
+            .teachers__wrapper 
+                .teachers__row 
+                    .teachers__item 
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-1.png", alt="" draggable="false")
+                            p.teachers__subtitle ОфициальнЫЕ ДОКУМЕНТЫ
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-2.png", alt="" draggable="false")
+                            p.teachers__subtitle УДОБНО, ПРОСТО, быстро
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-4.svg", alt="" draggable="false")
+                            p.teachers__subtitle Диплом получаете сразу
+                        .teachers__top 
+                            .teachers__img 
+                                img(src="@img/teachers-img-3.png", alt="" draggable="false")
+                            p.teachers__subtitle Бесплатное участие
+                    .teachers__image 
+                        img(src="@img/olympiads-teacher.png", alt="" draggable="false")
+                .teachers__row 
+                    .teachers__item 
+                        h2.teachers__title Олимпиада "МДК «Безопасная среда для пациента и персонала»"
+                        p.teachers__desc Укажите Ваш e-mail, чтобы мы могли выслать Вам отчет о прохождении тестирования.
+                        form(action="").teachers__form
+                            input(type="email" placeholder="Введите ваш e-mail" required).teachers__input
+                            button(type="submit").teachers__btn Начать тестирование 
+                p.teachers__p #[span.bold АКЦИЯ:] Каждый #[span третий] диплом в подарок! Действует только до #[span 28 марта]! 
